# onemodel

./: .gitignore  CONTRIBUTING  Dockerfile  INSTALLING  LICENSE  README  docker-compose.yml  pom.xml  test.html  todo-om-dev-details.txt
core/: CLAUDE.md  Cargo.toml  INSTALLING  pom.xml
core/src/: Attribute.rs  AttributeDataHolder.rs  AttributeWithValidAndObservedDates.rs  BooleanAttribute.rs  BooleanAttributeTest.rs  ClassMenu.rs  Controller.rs  ControllerTest.rs  Database.rs  DatabaseTestUtils.rs  DateAttribute.rs  DateAttributeTest.rs  Entity.rs  EntityClass.rs  EntityClassTest.rs  EntityMenu.rs  EntityTest.rs  FileAttribute.rs  FileAttributeTest.rs  Group.rs  GroupMenu.rs  GroupTest.rs  IdWrapper.rs  ImportExport.rs  ImportExportTest.rs  OmInstance.rs  OmInstanceTest.rs  OtherEntityMenu.rs  PostgreSQLDatabase.rs  PostgreSQLDatabaseTest.rs  QuantityAttribute.rs  QuickGroupMenu.rs  RelationToEntity.rs  RelationToGroup.rs  RelationToGroupTest.rs  RelationToLocalEntity.rs  RelationToLocalEntity.scala  RelationToLocalEntityTest.rs  RelationToRemoteEntity.rs  RelationType.rs  (+57 more)
core/src/controllers/: class_menu.rs  controller.rs  controller2.rs  controller3.rs  controller4.rs  controller5.rs  controller6.rs  controller_test.rs  entity_menu.rs  group_menu.rs  import_export.rs  main_menu.rs  mod.rs  om_instance_menu.rs  other_entity_menu.rs  quick_group_menu.rs  sortable_entries_menu.rs
core/src/main/java/org/onemodel/: MethodTracing.aj
core/src/main/scala/org/onemodel/: TextUI.scala
core/src/main/scala/org/onemodel/controller/: OtherEntityMenu.scala  QuickGroupMenu.scala  SortableEntriesMenu.scala
core/src/main/scala/org/onemodel/core/: Color.scala  OmException.scala  TextUI.scala  Util.scala
core/src/main/scala/org/onemodel/database/: PostgreSQLDatabase.scala
core/src/main/scala/org/onemodel/model/: AttributeDataHolder.scala  DateAttribute.scala  Entity.scala  FileAttribute.scala  IdWrapper.scala  RelationToGroup.scala  (+2 more)
core/src/model/: attribute.rs  attribute_data_holder.rs  attribute_with_valid_and_observed_dates.rs  boolean_attribute.rs  database.rs  database_test_utils.rs  date_attribute.rs  entity.rs  entity_class.rs  file_attribute.rs  group.rs  has_id.rs  id_wrapper.rs  mod.rs  om_instance.rs  postgresql_database.rs  quantity_attribute.rs  relation_to_entity.rs  relation_to_group.rs  relation_to_local_entity.rs  relation_to_remote_entity.rs  relation_type.rs  rest_database.rs  text_attribute.rs
core/src/model/postgres/: mod.rs  postgresql_database.rs  postgresql_database2.rs  postgresql_database3.rs  postgresql_database_tests.rs
core/src/test/java/: README
core/src/test/resources/: testImportFile2.txt  testImportFile5.txt  testImportFile6.txt
core/src/test/scala/org/onemodel/: ControllerTest.scala  DateAttributeTest.scala  EntityTest.scala  RelationToEntityTest.scala  RelationToGroupTest.scala  TextUITest.scala
core/testsuite/: README
core/testsuite/om.tests/: first.exp
(+149 files in other folders)
