[package]
name = "onemodel"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# next line added ~1.5MB to the debug binary. See related notes mentioning "Cargo.toml" in util.rs .
console = "0.15.1"
# next line added ~4.xMB to the debug binary
rustyline = "10.1.1"    #alternative?:  reedline = "0.11.0"
# next lines added 62MB to the binary (from 6.9MB to 69MB, debug version)
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres" ] }
#wont compile w/ next line: let...else statements are unstable or some such.
#sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
# next line added 9MB or 15MB to the debug binary (from 69MB to 78MB or 84MB; 4.1MB release, 2.7MB stripped!)
futures = "0.3.25"
# next lines added %% to the debug binary (from 84MB to %%)
chrono = "0.4.23"
randlib = "0.2.0"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    #"fast-rng",          # Use a faster (but still sufficiently random) RNG
    #"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


